# witty-plus

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  index.html  wt.patch
base-app/: AdminIndex.hpp  App.cpp  App.hpp  CMakeLists.txt  Doxyfile  ExtensionManager.cpp  ExtensionManager.hpp  IGui.cpp  IGui.hpp  INavigation.cpp  IUsers.cpp  IUsers.hpp  LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.hpp  README  UserEdit.cpp  UserEdit.hpp  UserList.cpp  UserList.hpp  UserManager.cpp  UserManager.hpp  common.hpp  db.cpp  db.hpp  deployrun.sh  main.cpp  memcheck-run.sh  memcheck-test.sh  setupDB.cpp  url2action.cpp  url2action.hpp  urls.cpp  urls.hpp
base-app/compass/: CMakeLists.txt  config.rb  config.rb.in
base-app/compass/.sass-cache/0e89d8ad819216d8c907dd0d3caeb3c467d03579/: _stretching.scssc
base-app/compass/.sass-cache/109fafb102ed81aee226551df8be922fd4bcd1b1/: controlPanel.scssc  desktop.scssc  fonts.scssc  forms.scssc  ie.scssc  mobile.scssc  print.scssc  screen.scssc  shared-mobile-desktop.scssc  wt.scssc  wt_ie.scssc  wt_ie6.scssc
base-app/compass/.sass-cache/157379dfca8e9b41327a90d7677c9aca05d2823a/: _hacks.scssc
base-app/compass/.sass-cache/5b4323a48580efed34b97b673712b44a427983fb/: _css3.scssc  _reset.scssc  _support.scssc
base-app/compass/.sass-cache/7a63f58a0d3ad508b99cb1feb81a174730281127/: _utilities.scssc
base-app/compass/.sass-cache/86d94879e64586169817ff6a21f1dc5ec609b5b2/: _appearance.scssc  _background-clip.scssc  _background-origin.scssc  _background-size.scssc  _border-radius.scssc  _box-shadow.scssc  _box-sizing.scssc  _box.scssc  _columns.scssc  _font-face.scssc  _gradient.scssc  _images.scssc  _inline-block.scssc  _opacity.scssc  _pie.scssc  _shared.scssc  _text-shadow.scssc  _transform.scssc  _transition.scssc
base-app/compass/src/: _colors.scss  _fonts.scss  _forms.scss  _shared-mobile-desktop.scss  desktop.scss  fonts.scss  forms.scss  mobile.scss  wt.scss
base-app/compass/stylesheets/: screen.css
base-app/extensions/: CMakeLists.txt  Extension.hpp  ExtensionLoader.cpp  ExtensionLoader.hpp  ExtensionManager.cpp  ExtensionManager.hpp
base-app/extensions/page/: CMakeLists.txt  Extension.hpp  Page.hpp  model.hpp  register.cpp
base-app/lib/: BaseApp.hpp  BaseSessionHandle.cpp  BaseSessionHandle.hpp  ButtonBar.hpp  CMakeLists.txt  DBNoDupValidator.hpp  InternalLink.hpp  MatchValidator.hpp  MemorySessionStore.cpp  MemorySessionStore.hpp  MoreAwesomeTemplate.hpp  ServerSideValidator.hpp  SessionHandle.cpp  SessionHandle.hpp  SessionManager.hpp  SimpleMenu.hpp  URLs.hpp  UserManager.cpp  UserManager.hpp  sha.hpp
base-app/lib/js/: CMakeLists.txt  MatchValidator.js
base-app/messages/: AdminIndex.xml  App.xml  ButtonBar.xml  LoginWindow.xml  MainWindow.xml  UserEdit.xml  UserList.xml  UserManager.xml
base-app/model/: User.hpp
base-app/static-content/resources/themes/default/: controlPanel.css  fonts.css  forms.css  wt.css
base-app/tests/: CMakeLists.txt  helpers.hpp  main.cpp  test_login.cpp  test_usermanager.cpp  test_usermanager.hpp
base-app/tests/fixtures/: App.hpp  Login.hpp  UserManager.hpp
base-app/tests/selenium/: login_as_admin.html  login_cancel.html
doc/html/: AbstractSessionStore_8hpp_source.html  App_8hpp_source.html  BaseApp_8hpp_source.html  BaseSessionHandle_8hpp_source.html  ButtonBar_8hpp_source.html  LoginWindow_8hpp_source.html  annotated.html  (+41 more)
exampleApp/: App.hpp  CMakeLists.txt  deployrun.sh  gdb-run.sh  main.cpp
exampleApp/compass/: CMakeLists.txt  config.rb  config.rb.in
exampleApp/compass/src/: _shared-mobile-desktop.scss
exampleApp/messages/: LoginWindow.xml  UserEdit.xml
reference/: AdminIndex_8hpp_source.html  App_8hpp_source.html  BaseApp_8hpp_source.html  BaseSessionHandle_8hpp_source.html  ButtonBar_8hpp_source.html  InternalLink_8hpp_source.html  LoginWindow_8hpp_source.html  Login_8hpp_source.html  MainWindow_8hpp_source.html  MatchValidator_8hpp_source.html  MemorySessionStore_8hpp_source.html  MoreAwesomeTemplate_8hpp_source.html  SessionHandle_8hpp_source.html  SessionManager_8hpp_source.html  URLs_8hpp_source.html  UserEdit_8hpp_source.html  UserList_8hpp_source.html  UserManager_8hpp_source.html  User_8hpp_source.html  _admin_index_8hpp.html  _admin_index_8hpp__dep__incl.map  _admin_index_8hpp__dep__incl.md5  _admin_index_8hpp__incl.map  _admin_index_8hpp__incl.md5  _admin_index_8hpp_source.html  _app_8cpp.html  _app_8cpp__incl.map  _app_8cpp__incl.md5  _app_8cpp_source.html  _app_8hpp.html  _app_8hpp__dep__incl.map  _app_8hpp__dep__incl.md5  _app_8hpp__incl.map  _app_8hpp__incl.md5  _app_8hpp_source.html  _base_app_8hpp.html  _base_app_8hpp__dep__incl.map  _base_app_8hpp__dep__incl.md5  _base_app_8hpp__incl.map  _base_app_8hpp__incl.md5  (+721 more)
tests/: CMakeLists.txt  helpers.hpp  test.sh  test_login.cpp  test_urlMatcher.cpp  test_usermanager.cpp  wt-config.xml
tests/fixtures/: App.hpp  Login.hpp  UserManager.hpp
tests/selenium/: all_tests.html
utils/: CMakeLists.txt  setupDB.cpp
wittyPlus/: AdminIndex.hpp  App.cpp  App.hpp  CMakeLists.txt  IGui.cpp  IGui.hpp  INavigation.cpp  INavigation.hpp  IURLs.cpp  IURLs.hpp  IUsers.cpp  LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.hpp  README  UserEdit.cpp  UserEdit.hpp  UserList.hpp  UserManager.hpp  db.cpp  main.cpp  run.sh  url2action.hpp  urls.hpp
wittyPlus/base/: BaseSessionHandle.cpp  BaseSessionHandle.hpp  CMakeLists.txt  DBNoDupValidator.hpp  MatchValidator.hpp  MoreAwesomeTemplate.hpp  ServerSideValidator.hpp  SessionHandle.hpp  URLs.hpp
wittyPlus/base/js/: customValidate.js
wittyPlus/compass/src/: _ie.scss
wittyPlus/extensions/: CMakeLists.txt  Extension.hpp  ExtensionManager.cpp  ExtensionManager.hpp
wittyPlus/extensions/page/: CMakeLists.txt  Extension.cpp  Extension.hpp  Model.cpp  Model.hpp  Page.hpp
wittyPlus/lib/: BaseApp.hpp  MoreAwesomeTemplate.hpp  URLSignal.hpp
wittyPlus/messages/: AdminIndex.xml  UserList.xml
wittyPlus/model/: User.hpp
wittyPlus/tests/: test_login.cpp  test_usermanager.cpp  wt_test_base.hpp
wittyPlus/tests/fixtures/: Login.hpp  UserManager.hpp
(+142 files in other folders)
